# parsekit

./: .gitignore  AGENTS.md  NOTICE.md  PRODUCT.md  README.md  brand.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-14-report.md
docs/: ACKNOWLEDGMENTS.md  INSTALL.md  README.md  RELEASING.md  benchmark-results.md
scripts/: acceptance-updater-e2e.sh  benchmark-ratios.json  benchmark_tokens.py  build-sidecar.sh  build-tray-icons.sh  bump-version-if-needed.sh  create-updater-tarball.sh  install-finder-quick-action.sh  kill-parsedock.sh  kill-parsekit.sh  postbuild-macos.sh  publish-release.sh  requirements-benchmark.txt  sync-version.sh
scripts/benchmark-fixtures/: sample.docx  slides.pptx  spreadsheet.xlsx
scripts/dmg/: GenerateBackground.swift  build-dmg.sh
sidecar/: README.md  index.js  package-lock.json  package.json
skills/parsekit/: SKILL.md
src/: App.svelte  ProgressHudApp.svelte  index.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/macos/: finder-quick-action.icns  install-finder-quick-action.sh  open-with-parsekit.sh
src-tauri/src/: clipboard_convert.rs  global_hotkey.rs  lib.rs  macos_notification.rs  macos_open_files.rs  macos_popover.rs  macos_trash.rs  main.rs  popover_trace.rs  sidecar_helpers.rs  token_count.rs  token_stats.rs
src/components/: AboutScreen.svelte  BatchHistoryList.svelte  DependencyPreflight.svelte  DropZone.svelte  FolderPicker.svelte  FormatSelector.svelte  HistoryScreen.svelte  LanguageSelector.svelte  OcrLanguageSelector.svelte  OutputFolderPicker.svelte  ProgressHud.svelte  ProgressList.svelte  RecentBatches.svelte  SettingsScreen.svelte  ThemeSelector.svelte  TokenSavingsBanner.svelte  TokenSavingsPanel.svelte  UpdateBanner.svelte
src/lib/: converterErrors.test.ts  converterErrors.ts  copyability.test.ts  depsAria.test.ts  depsAria.ts  depsCache.test.ts  (+19 more)
(+52 files in other folders)
