[package]
name = "parsedock"
version = "0.1.4"
edition = "2021"
default-run = "parsedock"

[lib]
name = "parsedock_lib"
crate-type = ["lib"]

[[bin]]
name = "parsedock-sidecar"
path = "src/bin/parsedock-sidecar.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
single-instance = "0.3"
liteparse = { version = "2.0.4", features = ["tesseract"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSHapticFeedback", "NSApplication", "NSWindow", "NSColor"] }
