[package]
name = "parsekit"
version = "0.2.1"
edition = "2021"
default-run = "parsekit"

[lib]
name = "parsekit_lib"
crate-type = ["lib"]

[[bin]]
name = "parsekit-sidecar"
path = "src/bin/parsekit-sidecar.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
url = "2"
single-instance = "0.3"
liteparse = { version = "2.0.4", features = ["tesseract"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util"] }
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSHapticFeedback", "NSApplication", "NSWindow", "NSColor"] }
